--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="https://placehold.co/120x120/f3e5f5/6a1b9a?text=DD&font=playfair-display" alt="Divination Diva Logo" class="logo-img">
+                <img src="l.jpg" alt="Divination Diva Logo" class="logo-img">
                 <a href="#home-page" class="logo-text page-link">Divination Diva</a>
             </div>
             <nav>
@@ -699,22 +699,22 @@
                     
                     <div class="slideshow-container">
                         <!-- Slides --><div class="slide-item fade">
-                            <img src="https://placehold.co/800x500/1a0129/f3e5f5?text=Tarot+Cards" alt="Aesthetic tarot cards">
+                            <img src="aa.png" alt="Aesthetic tarot cards">
                         </div>
                         <div class="slide-item fade">
-                            <img src="https://placehold.co/800x500/1a0129/f3e5f5?text=Crystals" alt="Aesthetic crystals">
+                            <img src="bb.png" alt="Aesthetic crystals">
                         </div>
                         <div class="slide-item fade">
-                            <img src="https://placehold.co/800x500/1a0129/f3e5f5?text=Mystic+Hands" alt="Aesthetic celestial art">
+                            <img src="cc.png" alt="Aesthetic celestial art">
                         </div>
                         <div class="slide-item fade">
-                            <img src="https://placehold.co/800x500/1a0129/f3e5f5?text=Zodiac" alt="Aesthetic zodiac art">
+                            <img src="dd.jpg" alt="Aesthetic zodiac art">
                         </div>
                         <div class="slide-item fade">
-                            <img src="https://placehold.co/800x500/1a0129/f3e5f5?text=Moon+Phases" alt="Aesthetic moon phases">
+                            <img src="ee.jpg" alt="Aesthetic moon phases">
                         </div>
                         <div class="slide-item fade">
-                            <img src="https://placehold.co/800x500/1a0129/f3e5f5?text=Meditation" alt="Aesthetic meditation scene">
+                            <img src="ff.jpg" alt="Aesthetic meditation scene">
                         </div>
                         
                         <!-- Next/prev arrows --><a class="prev">&#10094;</a>
