--- a/index.html
+++ b/index.html
@@ -741,6 +741,9 @@
                     <div class="price-list-container">
                         <div class="price-column">
                             <div class="price-header"> <h3>Basic Analysis With Tarot</h3> </div>
+                            <div class="price-header" id =2>
+                                <p>This reading is done with a single deck which helps you to understand your problem on a superficial level. </p>
+                            </div>
                             <div class="price-category"><h4>VOICE NOTE</h4> 
                                 <div class="price-item clickable-service" data-service-name="Basic Analysis: Voice Note 1 ques"> <span>Voice Note 1 ques</span> <span class="price">₹49</span> </div>
                                 <div class="price-item clickable-service" data-service-name="Basic Analysis: Voice Note 3 ques"> <span>Voice Note 3 ques</span> <span class="price">₹149</span> </div>
@@ -757,6 +760,9 @@
                         </div>
                         <div class="price-column">
                             <div class="price-header"> <h3>In-Depth Analysis With Tarot</h3> </div>
+                            <div class="price-header" id =1>
+                                <p>This reading is done with three decks which helps you to understand your problem on a deeper subconscious level.</p>
+                            </div>
                             <div class="price-category"><h4>VOICE NOTE</h4> 
                                 <div class="price-item clickable-service" data-service-name="In-Depth Analysis: Voice Note 1 ques"> <span>Voice Note 1 ques</span> <span class="price">₹149</span> </div>
                                 <div class="price-item clickable-service" data-service-name="In-Depth Analysis: Voice Note 3 ques"> <span>Voice Note 3 ques</span> <span class="price">₹449</span> </div>
@@ -1010,6 +1016,8 @@
             // --- End of WhatsApp Logic ---
 
         });
+        document.getElementById(1).style.padding='2px'
+        document.getElementById(2).style.padding='2px'
     </script>
 </body>
 </html>
