--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                     <h2>Our Sacred Services</h2>
                     <div class="service-grid">
                         <div class="service-card">
-                            <h3>In-Depth Tarot Readings</h3>
+                            <h3>Tarot Readings</h3>
                             <p>Connect via voice, call, or video for a personalized tarot analysis that illuminates your path.</p>
                             <a href="#services-page" class="cta-button-secondary page-link">View Pricing</a>
                         </div>
@@ -803,7 +803,7 @@
         <div class="container footer-content">
             <div class="footer-column about">
                 <h4>Divination Diva</h4>
-                <p>Guiding you through love and life with insightful tarot and astrology readings.</p>
+                <p>Guiding you through love and life with insightful tarot readings.</p>
             </div>
             <div class="footer-column links">
                 <h4>Quick Links</h4>
